# bot-trading-pro

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  NOTES.md  PLAN.md
apps/dashboardd/: Cargo.toml
apps/dashboardd/src/: dashboard.html  main.rs
apps/ops-cli/: Cargo.toml
apps/ops-cli/src/: main.rs
apps/traderd/: Cargo.toml
apps/traderd/src/: health.rs  lib.rs  main.rs  runtime.rs  state_machine.rs
config/: base.toml  calibration.toml  dashboard.toml  live.toml  pairs.toml  risk.toml
crates/accounting/: Cargo.toml
crates/accounting/src/: ledger.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: clock.rs  decimal.rs  ids.rs  lib.rs  retry.rs  serde_helpers.rs  time.rs
crates/config_loader/: Cargo.toml
crates/config_loader/src/: lib.rs  loader.rs  models.rs
crates/control_plane/: Cargo.toml
crates/control_plane/src/: lib.rs  plane.rs
crates/domain/: Cargo.toml
crates/domain/src/: account.rs  control.rs  execution.rs  features.rs  health.rs  lib.rs  market.rs  regime.rs  risk.rs  runtime.rs  strategy.rs
crates/exchange_binance_spot/: Cargo.toml
crates/exchange_binance_spot/src/: client.rs  lib.rs  models.rs
crates/execution/: Cargo.toml
crates/execution/src/: engine.rs  lib.rs
crates/features/: Cargo.toml
crates/features/src/: engine.rs
crates/market_data/: Cargo.toml
crates/market_data/src/: lib.rs  orderbook.rs  service.rs
crates/portfolio/: Cargo.toml
crates/portfolio/src/: lib.rs  service.rs
crates/regime/: Cargo.toml
crates/regime/src/: detector.rs  lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs  manager.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  store.rs
crates/strategy_coordinator/: Cargo.toml
crates/strategy_coordinator/src/: coordinator.rs  lib.rs
crates/strategy_mm/: Cargo.toml
crates/strategy_mm/src/: strategy.rs
crates/strategy_scalp/: Cargo.toml
crates/strategy_scalp/src/: lib.rs  strategy.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  sink.rs
docs/: ARCHITECTURE.md
ops/backup/: README.md
ops/incident/: README.md
ops/systemd/: README.md
ops/ubuntu/: LIVE_PHASE1_RUNBOOK.md  README.md
scripts/: health_check.sh  preflight_live.sh  start_dashboardd.sh  start_traderd.sh  stop_stack.sh
tests/: README.md
