[workspace]
members = [
    "apps/traderd",
    "apps/dashboardd",
    "apps/ops-cli",
    "crates/common",
    "crates/domain",
    "crates/config_loader",
    "crates/exchange_binance_spot",
    "crates/market_data",
    "crates/features",
    "crates/regime",
    "crates/strategy_coordinator",
    "crates/strategy_mm",
    "crates/strategy_scalp",
    "crates/risk",
    "crates/execution",
    "crates/portfolio",
    "crates/accounting",
    "crates/storage",
    "crates/telemetry",
    "crates/control_plane",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
