[package]
name = "dashboardd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
common = { path = "../../crates/common" }
config_loader = { path = "../../crates/config_loader" }
domain = { path = "../../crates/domain" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
