[package]
name = "exchange_binance_spot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
common = { path = "../common" }
domain = { path = "../domain" }
futures-util.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true
