[package]
name = "execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
common = { path = "../common" }
domain = { path = "../domain" }
exchange_binance_spot = { path = "../exchange_binance_spot" }
tokio.workspace = true
tracing.workspace = true
